A refactor and adding testcases